y.output
Terminals unused in grammar

    TK_FIM
    TK_ERROR
    TK_RETURN


State 0 conflicts: 25 shift/reduce
State 5 conflicts: 4 shift/reduce
State 29 conflicts: 25 shift/reduce
State 33 conflicts: 25 shift/reduce
State 34 conflicts: 25 shift/reduce
State 41 conflicts: 24 shift/reduce
State 43 conflicts: 2 reduce/reduce
State 45 conflicts: 2 shift/reduce, 2 reduce/reduce
State 56 conflicts: 4 reduce/reduce
State 64 conflicts: 3 shift/reduce
State 73 conflicts: 25 shift/reduce, 25 reduce/reduce
State 74 conflicts: 25 shift/reduce
State 75 conflicts: 25 shift/reduce
State 108 conflicts: 2 shift/reduce
State 119 conflicts: 25 shift/reduce, 25 reduce/reduce
State 122 conflicts: 2 shift/reduce
State 123 conflicts: 2 shift/reduce, 4 reduce/reduce
State 129 conflicts: 2 shift/reduce
State 130 conflicts: 2 shift/reduce, 4 reduce/reduce
State 142 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 TOKEN_WHILE: TK_WHILE

    2 TOKEN_DO: TK_DO

    3 TOKEN_FOR: TK_FOR

    4 CHAVE_ENTRADA: '{'

    5 CHAVE_SAIDA: '}'

    6 OPATRIBUICAO: '+' TK_IGUAL
    7             | '-' TK_IGUAL
    8             | '*' TK_IGUAL
    9             | '/' TK_IGUAL

   10 S: TK_TIPO TK_MAIN '(' ')' BLOCO_FUNCTION
   11  | INIT

   12 INIT: BLOCO
   13     | COMANDOS

   14 BLOCO_FUNCTION: CHAVE_ENTRADA INIT CHAVE_SAIDA

   15 BLOCO: COMANDOS BLOCO COMANDOS
   16      | BLOCO_FUNCTION
   17      | BLOCO BLOCO

   18 COMANDOS: COMANDO COMANDOS
   19         | %empty

   20 IF: TK_IF '(' LOGIC ')' COMANDBLOCO
   21   | TK_IF '(' LOGIC ')' COMANDBLOCO TK_ELSE COMANDBLOCO

   22 LOOPS: TOKEN_WHILE '(' LOGIC ')' COMANDBLOCO
   23      | TOKEN_DO COMANDBLOCO TK_WHILE '(' LOGIC ')' ';'
   24      | TOKEN_FOR '(' EXPRESSAO ';' LOGIC ';' EXPRESSAO ')' COMANDBLOCO

   25 COMANDBLOCO: BLOCO_FUNCTION
   26            | COMANDO

   27 TK_TIPO: TK_INT
   28        | TK_FLOAT
   29        | TK_CHAR
   30        | TK_STRING
   31        | TK_BOOL
   32        | TK_VAR

   33 EXPRESSAO: TK_TIPO TK_ID
   34          | TK_TIPO TK_ID TK_IGUAL ATRIBUICAO
   35          | ATRIBUICAO
   36          | TK_ID OPATRIBUICAO OPERATIONS
   37          | TK_ID '+' '+'
   38          | TK_ID '-' '-'
   39          | LOGIC

   40 ATRIBUICAO: TK_ID TK_IGUAL ATRIBUICAO
   41           | OPERATIONS

   42 COMANDOLOOPS: TK_BREAK
   43             | TK_CONTINUE

   44 COMANDO: EXPRESSAO ';'
   45        | IF
   46        | LOOPS
   47        | COMANDOLOOPS ';'
   48        | TK_SCANNER '(' TK_ID ')' ';'
   49        | TK_PRINT '(' OPERATIONS ')' ';'

   50 OPERATIONS: LOGIC
   51           | CALC

   52 OPLOGIC: TK_OU
   53        | TK_E

   54 LOGIC: LOGIC OPLOGIC LOGIC
   55      | CALC OPLOGIC CALC
   56      | LOGIC OPLOGIC CALC
   57      | CALC OPLOGIC LOGIC
   58      | TK_NEGACAO LOGIC
   59      | TK_NEGACAO CALC
   60      | RELACION
   61      | '(' LOGIC ')'

   62 OPRELACION: '>'
   63           | '<'
   64           | TK_MAIOR_IGUAL
   65           | TK_MENOR_IGUAL
   66           | TK_IGUALDADE
   67           | TK_IDENTICO
   68           | TK_DIFERENTE

   69 RELACION: CALC OPRELACION CALC
   70         | CALC

   71 CALC: CALC '+' CALC
   72     | CALC '*' CALC
   73     | CALC '-' CALC
   74     | CALC '/' CALC
   75     | '(' CALC ')'
   76     | CONVERSION

   77 CONVERSION: ELEMENTS
   78           | '(' TK_TIPO ')' ELEMENTS

   79 ELEMENTS: TK_NUM
   80         | '-' TK_NUM
   81         | TK_REAL
   82         | '-' TK_REAL
   83         | TK_CHARACTER
   84         | TK_FRASE
   85         | TK_TRUE
   86         | TK_FALSE
   87         | TK_ID


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 20 21 22 23 24 48 49 61 75 78
    ')' (41) 10 20 21 22 23 24 48 49 61 75 78
    '*' (42) 8 72
    '+' (43) 6 37 71
    '-' (45) 7 38 73 80 82
    '/' (47) 9 74
    ';' (59) 23 24 44 47 48 49
    '<' (60) 63
    '>' (62) 62
    '{' (123) 4
    '}' (125) 5
    error (256)
    TK_NUM (258) 79 80
    TK_REAL (259) 81 82
    TK_STRING (260) 30
    TK_CHARACTER (261) 83
    TK_MAIOR_IGUAL (262) 64
    TK_MENOR_IGUAL (263) 65
    TK_IGUALDADE (264) 66
    TK_IDENTICO (265) 67
    TK_DIFERENTE (266) 68
    TK_MAIN (267) 10
    TK_ID (268) 33 34 36 37 38 40 48 87
    TK_INT (269) 27
    TK_FLOAT (270) 28
    TK_FRASE (271) 84
    TK_BOOL (272) 31
    TK_TRUE (273) 85
    TK_FALSE (274) 86
    TK_CHAR (275) 29
    TK_OU (276) 52
    TK_E (277) 53
    TK_NEGACAO (278) 58 59
    TK_VAR (279) 32
    TK_IF (280) 20 21
    TK_ELSE (281) 21
    TK_FOR (282) 3
    TK_WHILE (283) 1 23
    TK_DO (284) 2
    TK_CONTINUE (285) 43
    TK_BREAK (286) 42
    TK_SCANNER (287) 48
    TK_PRINT (288) 49
    TK_FIM (289)
    TK_ERROR (290)
    TK_IGUAL (291) 6 7 8 9 34 40
    TK_RETURN (292)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    TOKEN_WHILE (50)
        on left: 1
        on right: 22
    TOKEN_DO (51)
        on left: 2
        on right: 23
    TOKEN_FOR (52)
        on left: 3
        on right: 24
    CHAVE_ENTRADA (53)
        on left: 4
        on right: 14
    CHAVE_SAIDA (54)
        on left: 5
        on right: 14
    OPATRIBUICAO (55)
        on left: 6 7 8 9
        on right: 36
    S (56)
        on left: 10 11
        on right: 0
    INIT (57)
        on left: 12 13
        on right: 11 14
    BLOCO_FUNCTION (58)
        on left: 14
        on right: 10 16 25
    BLOCO (59)
        on left: 15 16 17
        on right: 12 15 17
    COMANDOS (60)
        on left: 18 19
        on right: 13 15 18
    IF (61)
        on left: 20 21
        on right: 45
    LOOPS (62)
        on left: 22 23 24
        on right: 46
    COMANDBLOCO (63)
        on left: 25 26
        on right: 20 21 22 23 24
    TK_TIPO (64)
        on left: 27 28 29 30 31 32
        on right: 10 33 34 78
    EXPRESSAO (65)
        on left: 33 34 35 36 37 38 39
        on right: 24 44
    ATRIBUICAO (66)
        on left: 40 41
        on right: 34 35 40
    COMANDOLOOPS (67)
        on left: 42 43
        on right: 47
    COMANDO (68)
        on left: 44 45 46 47 48 49
        on right: 18 26
    OPERATIONS (69)
        on left: 50 51
        on right: 36 41 49
    OPLOGIC (70)
        on left: 52 53
        on right: 54 55 56 57
    LOGIC (71)
        on left: 54 55 56 57 58 59 60 61
        on right: 20 21 22 23 24 39 50 54 56 57 58 61
    OPRELACION (72)
        on left: 62 63 64 65 66 67 68
        on right: 69
    RELACION (73)
        on left: 69 70
        on right: 60
    CALC (74)
        on left: 71 72 73 74 75 76
        on right: 51 55 56 57 59 69 70 71 72 73 74 75
    CONVERSION (75)
        on left: 77 78
        on right: 76
    ELEMENTS (76)
        on left: 79 80 81 82 83 84 85 86 87
        on right: 77 78


State 0

    0 $accept: . S $end

    TK_NUM        shift, and go to state 1
    TK_REAL       shift, and go to state 2
    TK_STRING     shift, and go to state 3
    TK_CHARACTER  shift, and go to state 4
    TK_ID         shift, and go to state 5
    TK_INT        shift, and go to state 6
    TK_FLOAT      shift, and go to state 7
    TK_FRASE      shift, and go to state 8
    TK_BOOL       shift, and go to state 9
    TK_TRUE       shift, and go to state 10
    TK_FALSE      shift, and go to state 11
    TK_CHAR       shift, and go to state 12
    TK_NEGACAO    shift, and go to state 13
    TK_VAR        shift, and go to state 14
    TK_IF         shift, and go to state 15
    TK_FOR        shift, and go to state 16
    TK_WHILE      shift, and go to state 17
    TK_DO         shift, and go to state 18
    TK_CONTINUE   shift, and go to state 19
    TK_BREAK      shift, and go to state 20
    TK_SCANNER    shift, and go to state 21
    TK_PRINT      shift, and go to state 22
    '-'           shift, and go to state 23
    '{'           shift, and go to state 24
    '('           shift, and go to state 25

    TK_NUM        [reduce using rule 19 (COMANDOS)]
    TK_REAL       [reduce using rule 19 (COMANDOS)]
    TK_STRING     [reduce using rule 19 (COMANDOS)]
    TK_CHARACTER  [reduce using rule 19 (COMANDOS)]
    TK_ID         [reduce using rule 19 (COMANDOS)]
    TK_INT        [reduce using rule 19 (COMANDOS)]
    TK_FLOAT      [reduce using rule 19 (COMANDOS)]
    TK_FRASE      [reduce using rule 19 (COMANDOS)]
    TK_BOOL       [reduce using rule 19 (COMANDOS)]
    TK_TRUE       [reduce using rule 19 (COMANDOS)]
    TK_FALSE      [reduce using rule 19 (COMANDOS)]
    TK_CHAR       [reduce using rule 19 (COMANDOS)]
    TK_NEGACAO    [reduce using rule 19 (COMANDOS)]
    TK_VAR        [reduce using rule 19 (COMANDOS)]
    TK_IF         [reduce using rule 19 (COMANDOS)]
    TK_FOR        [reduce using rule 19 (COMANDOS)]
    TK_WHILE      [reduce using rule 19 (COMANDOS)]
    TK_DO         [reduce using rule 19 (COMANDOS)]
    TK_CONTINUE   [reduce using rule 19 (COMANDOS)]
    TK_BREAK      [reduce using rule 19 (COMANDOS)]
    TK_SCANNER    [reduce using rule 19 (COMANDOS)]
    TK_PRINT      [reduce using rule 19 (COMANDOS)]
    '-'           [reduce using rule 19 (COMANDOS)]
    '{'           [reduce using rule 19 (COMANDOS)]
    '('           [reduce using rule 19 (COMANDOS)]
    $default      reduce using rule 19 (COMANDOS)

    TOKEN_WHILE     go to state 26
    TOKEN_DO        go to state 27
    TOKEN_FOR       go to state 28
    CHAVE_ENTRADA   go to state 29
    S               go to state 30
    INIT            go to state 31
    BLOCO_FUNCTION  go to state 32
    BLOCO           go to state 33
    COMANDOS        go to state 34
    IF              go to state 35
    LOOPS           go to state 36
    TK_TIPO         go to state 37
    EXPRESSAO       go to state 38
    ATRIBUICAO      go to state 39
    COMANDOLOOPS    go to state 40
    COMANDO         go to state 41
    OPERATIONS      go to state 42
    LOGIC           go to state 43
    RELACION        go to state 44
    CALC            go to state 45
    CONVERSION      go to state 46
    ELEMENTS        go to state 47


State 1

   79 ELEMENTS: TK_NUM .

    $default  reduce using rule 79 (ELEMENTS)


State 2

   81 ELEMENTS: TK_REAL .

    $default  reduce using rule 81 (ELEMENTS)


State 3

   30 TK_TIPO: TK_STRING .

    $default  reduce using rule 30 (TK_TIPO)


State 4

   83 ELEMENTS: TK_CHARACTER .

    $default  reduce using rule 83 (ELEMENTS)


State 5

   36 EXPRESSAO: TK_ID . OPATRIBUICAO OPERATIONS
   37          | TK_ID . '+' '+'
   38          | TK_ID . '-' '-'
   40 ATRIBUICAO: TK_ID . TK_IGUAL ATRIBUICAO
   87 ELEMENTS: TK_ID .

    TK_IGUAL  shift, and go to state 48
    '+'       shift, and go to state 49
    '-'       shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52

    '+'       [reduce using rule 87 (ELEMENTS)]
    '-'       [reduce using rule 87 (ELEMENTS)]
    '*'       [reduce using rule 87 (ELEMENTS)]
    '/'       [reduce using rule 87 (ELEMENTS)]
    $default  reduce using rule 87 (ELEMENTS)

    OPATRIBUICAO  go to state 53


State 6

   27 TK_TIPO: TK_INT .

    $default  reduce using rule 27 (TK_TIPO)


State 7

   28 TK_TIPO: TK_FLOAT .

    $default  reduce using rule 28 (TK_TIPO)


State 8

   84 ELEMENTS: TK_FRASE .

    $default  reduce using rule 84 (ELEMENTS)


State 9

   31 TK_TIPO: TK_BOOL .

    $default  reduce using rule 31 (TK_TIPO)


State 10

   85 ELEMENTS: TK_TRUE .

    $default  reduce using rule 85 (ELEMENTS)


State 11

   86 ELEMENTS: TK_FALSE .

    $default  reduce using rule 86 (ELEMENTS)


State 12

   29 TK_TIPO: TK_CHAR .

    $default  reduce using rule 29 (TK_TIPO)


State 13

   58 LOGIC: TK_NEGACAO . LOGIC
   59      | TK_NEGACAO . CALC

    TK_NUM        shift, and go to state 1
    TK_REAL       shift, and go to state 2
    TK_CHARACTER  shift, and go to state 4
    TK_ID         shift, and go to state 54
    TK_FRASE      shift, and go to state 8
    TK_TRUE       shift, and go to state 10
    TK_FALSE      shift, and go to state 11
    TK_NEGACAO    shift, and go to state 13
    '-'           shift, and go to state 23
    '('           shift, and go to state 25

    LOGIC       go to state 55
    RELACION    go to state 44
    CALC        go to state 56
    CONVERSION  go to state 46
    ELEMENTS    go to state 47


State 14

   32 TK_TIPO: TK_VAR .

    $default  reduce using rule 32 (TK_TIPO)


State 15

   20 IF: TK_IF . '(' LOGIC ')' COMANDBLOCO
   21   | TK_IF . '(' LOGIC ')' COMANDBLOCO TK_ELSE COMANDBLOCO

    '('  shift, and go to state 57


State 16

    3 TOKEN_FOR: TK_FOR .

    $default  reduce using rule 3 (TOKEN_FOR)


State 17

    1 TOKEN_WHILE: TK_WHILE .

    $default  reduce using rule 1 (TOKEN_WHILE)


State 18

    2 TOKEN_DO: TK_DO .

    $default  reduce using rule 2 (TOKEN_DO)


State 19

   43 COMANDOLOOPS: TK_CONTINUE .

    $default  reduce using rule 43 (COMANDOLOOPS)


State 20

   42 COMANDOLOOPS: TK_BREAK .

    $default  reduce using rule 42 (COMANDOLOOPS)


State 21

   48 COMANDO: TK_SCANNER . '(' TK_ID ')' ';'

    '('  shift, and go to state 58


State 22

   49 COMANDO: TK_PRINT . '(' OPERATIONS ')' ';'

    '('  shift, and go to state 59


State 23

   80 ELEMENTS: '-' . TK_NUM
   82         | '-' . TK_REAL

    TK_NUM   shift, and go to state 60
    TK_REAL  shift, and go to state 61


State 24

    4 CHAVE_ENTRADA: '{' .

    $default  reduce using rule 4 (CHAVE_ENTRADA)


State 25

   61 LOGIC: '(' . LOGIC ')'
   75 CALC: '(' . CALC ')'
   78 CONVERSION: '(' . TK_TIPO ')' ELEMENTS

    TK_NUM        shift, and go to state 1
    TK_REAL       shift, and go to state 2
    TK_STRING     shift, and go to state 3
    TK_CHARACTER  shift, and go to state 4
    TK_ID         shift, and go to state 54
    TK_INT        shift, and go to state 6
    TK_FLOAT      shift, and go to state 7
    TK_FRASE      shift, and go to state 8
    TK_BOOL       shift, and go to state 9
    TK_TRUE       shift, and go to state 10
    TK_FALSE      shift, and go to state 11
    TK_CHAR       shift, and go to state 12
    TK_NEGACAO    shift, and go to state 13
    TK_VAR        shift, and go to state 14
    '-'           shift, and go to state 23
    '('           shift, and go to state 25

    TK_TIPO     go to state 62
    LOGIC       go to state 63
    RELACION    go to state 44
    CALC        go to state 64
    CONVERSION  go to state 46
    ELEMENTS    go to state 47


State 26

   22 LOOPS: TOKEN_WHILE . '(' LOGIC ')' COMANDBLOCO

    '('  shift, and go to state 65


State 27

   23 LOOPS: TOKEN_DO . COMANDBLOCO TK_WHILE '(' LOGIC ')' ';'

    TK_NUM        shift, and go to state 1
    TK_REAL       shift, and go to state 2
    TK_STRING     shift, and go to state 3
    TK_CHARACTER  shift, and go to state 4
    TK_ID         shift, and go to state 5
    TK_INT        shift, and go to state 6
    TK_FLOAT      shift, and go to state 7
    TK_FRASE      shift, and go to state 8
    TK_BOOL       shift, and go to state 9
    TK_TRUE       shift, and go to state 10
    TK_FALSE      shift, and go to state 11
    TK_CHAR       shift, and go to state 12
    TK_NEGACAO    shift, and go to state 13
    TK_VAR        shift, and go to state 14
    TK_IF         shift, and go to state 15
    TK_FOR        shift, and go to state 16
    TK_WHILE      shift, and go to state 17
    TK_DO         shift, and go to state 18
    TK_CONTINUE   shift, and go to state 19
    TK_BREAK      shift, and go to state 20
    TK_SCANNER    shift, and go to state 21
    TK_PRINT      shift, and go to state 22
    '-'           shift, and go to state 23
    '{'           shift, and go to state 24
    '('           shift, and go to state 25

    TOKEN_WHILE     go to state 26
    TOKEN_DO        go to state 27
    TOKEN_FOR       go to state 28
    CHAVE_ENTRADA   go to state 29
    BLOCO_FUNCTION  go to state 66
    IF              go to state 35
    LOOPS           go to state 36
    COMANDBLOCO     go to state 67
    TK_TIPO         go to state 68
    EXPRESSAO       go to state 38
    ATRIBUICAO      go to state 39
    COMANDOLOOPS    go to state 40
    COMANDO         go to state 69
    OPERATIONS      go to state 42
    LOGIC           go to state 43
    RELACION        go to state 44
    CALC            go to state 45
    CONVERSION      go to state 46
    ELEMENTS        go to state 47


State 28

   24 LOOPS: TOKEN_FOR . '(' EXPRESSAO ';' LOGIC ';' EXPRESSAO ')' COMANDBLOCO

    '('  shift, and go to state 70


State 29

   14 BLOCO_FUNCTION: CHAVE_ENTRADA . INIT CHAVE_SAIDA

    TK_NUM        shift, and go to state 1
    TK_REAL       shift, and go to state 2
    TK_STRING     shift, and go to state 3
    TK_CHARACTER  shift, and go to state 4
    TK_ID         shift, and go to state 5
    TK_INT        shift, and go to state 6
    TK_FLOAT      shift, and go to state 7
    TK_FRASE      shift, and go to state 8
    TK_BOOL       shift, and go to state 9
    TK_TRUE       shift, and go to state 10
    TK_FALSE      shift, and go to state 11
    TK_CHAR       shift, and go to state 12
    TK_NEGACAO    shift, and go to state 13
    TK_VAR        shift, and go to state 14
    TK_IF         shift, and go to state 15
    TK_FOR        shift, and go to state 16
    TK_WHILE      shift, and go to state 17
    TK_DO         shift, and go to state 18
    TK_CONTINUE   shift, and go to state 19
    TK_BREAK      shift, and go to state 20
    TK_SCANNER    shift, and go to state 21
    TK_PRINT      shift, and go to state 22
    '-'           shift, and go to state 23
    '{'           shift, and go to state 24
    '('           shift, and go to state 25

    TK_NUM        [reduce using rule 19 (COMANDOS)]
    TK_REAL       [reduce using rule 19 (COMANDOS)]
    TK_STRING     [reduce using rule 19 (COMANDOS)]
    TK_CHARACTER  [reduce using rule 19 (COMANDOS)]
    TK_ID         [reduce using rule 19 (COMANDOS)]
    TK_INT        [reduce using rule 19 (COMANDOS)]
    TK_FLOAT      [reduce using rule 19 (COMANDOS)]
    TK_FRASE      [reduce using rule 19 (COMANDOS)]
    TK_BOOL       [reduce using rule 19 (COMANDOS)]
    TK_TRUE       [reduce using rule 19 (COMANDOS)]
    TK_FALSE      [reduce using rule 19 (COMANDOS)]
    TK_CHAR       [reduce using rule 19 (COMANDOS)]
    TK_NEGACAO    [reduce using rule 19 (COMANDOS)]
    TK_VAR        [reduce using rule 19 (COMANDOS)]
    TK_IF         [reduce using rule 19 (COMANDOS)]
    TK_FOR        [reduce using rule 19 (COMANDOS)]
    TK_WHILE      [reduce using rule 19 (COMANDOS)]
    TK_DO         [reduce using rule 19 (COMANDOS)]
    TK_CONTINUE   [reduce using rule 19 (COMANDOS)]
    TK_BREAK      [reduce using rule 19 (COMANDOS)]
    TK_SCANNER    [reduce using rule 19 (COMANDOS)]
    TK_PRINT      [reduce using rule 19 (COMANDOS)]
    '-'           [reduce using rule 19 (COMANDOS)]
    '{'           [reduce using rule 19 (COMANDOS)]
    '('           [reduce using rule 19 (COMANDOS)]
    $default      reduce using rule 19 (COMANDOS)

    TOKEN_WHILE     go to state 26
    TOKEN_DO        go to state 27
    TOKEN_FOR       go to state 28
    CHAVE_ENTRADA   go to state 29
    INIT            go to state 71
    BLOCO_FUNCTION  go to state 32
    BLOCO           go to state 33
    COMANDOS        go to state 34
    IF              go to state 35
    LOOPS           go to state 36
    TK_TIPO         go to state 68
    EXPRESSAO       go to state 38
    ATRIBUICAO      go to state 39
    COMANDOLOOPS    go to state 40
    COMANDO         go to state 41
    OPERATIONS      go to state 42
    LOGIC           go to state 43
    RELACION        go to state 44
    CALC            go to state 45
    CONVERSION      go to state 46
    ELEMENTS        go to state 47


State 30

    0 $accept: S . $end

    $end  shift, and go to state 72


State 31

   11 S: INIT .

    $default  reduce using rule 11 (S)


State 32

   16 BLOCO: BLOCO_FUNCTION .

    $default  reduce using rule 16 (BLOCO)


State 33

   12 INIT: BLOCO .
   17 BLOCO: BLOCO . BLOCO

    TK_NUM        shift, and go to state 1
    TK_REAL       shift, and go to state 2
    TK_STRING     shift, and go to state 3
    TK_CHARACTER  shift, and go to state 4
    TK_ID         shift, and go to state 5
    TK_INT        shift, and go to state 6
    TK_FLOAT      shift, and go to state 7
    TK_FRASE      shift, and go to state 8
    TK_BOOL       shift, and go to state 9
    TK_TRUE       shift, and go to state 10
    TK_FALSE      shift, and go to state 11
    TK_CHAR       shift, and go to state 12
    TK_NEGACAO    shift, and go to state 13
    TK_VAR        shift, and go to state 14
    TK_IF         shift, and go to state 15
    TK_FOR        shift, and go to state 16
    TK_WHILE      shift, and go to state 17
    TK_DO         shift, and go to state 18
    TK_CONTINUE   shift, and go to state 19
    TK_BREAK      shift, and go to state 20
    TK_SCANNER    shift, and go to state 21
    TK_PRINT      shift, and go to state 22
    '-'           shift, and go to state 23
    '{'           shift, and go to state 24
    '('           shift, and go to state 25

    TK_NUM        [reduce using rule 19 (COMANDOS)]
    TK_REAL       [reduce using rule 19 (COMANDOS)]
    TK_STRING     [reduce using rule 19 (COMANDOS)]
    TK_CHARACTER  [reduce using rule 19 (COMANDOS)]
    TK_ID         [reduce using rule 19 (COMANDOS)]
    TK_INT        [reduce using rule 19 (COMANDOS)]
    TK_FLOAT      [reduce using rule 19 (COMANDOS)]
    TK_FRASE      [reduce using rule 19 (COMANDOS)]
    TK_BOOL       [reduce using rule 19 (COMANDOS)]
    TK_TRUE       [reduce using rule 19 (COMANDOS)]
    TK_FALSE      [reduce using rule 19 (COMANDOS)]
    TK_CHAR       [reduce using rule 19 (COMANDOS)]
    TK_NEGACAO    [reduce using rule 19 (COMANDOS)]
    TK_VAR        [reduce using rule 19 (COMANDOS)]
    TK_IF         [reduce using rule 19 (COMANDOS)]
    TK_FOR        [reduce using rule 19 (COMANDOS)]
    TK_WHILE      [reduce using rule 19 (COMANDOS)]
    TK_DO         [reduce using rule 19 (COMANDOS)]
    TK_CONTINUE   [reduce using rule 19 (COMANDOS)]
    TK_BREAK      [reduce using rule 19 (COMANDOS)]
    TK_SCANNER    [reduce using rule 19 (COMANDOS)]
    TK_PRINT      [reduce using rule 19 (COMANDOS)]
    '-'           [reduce using rule 19 (COMANDOS)]
    '{'           [reduce using rule 19 (COMANDOS)]
    '('           [reduce using rule 19 (COMANDOS)]
    $default      reduce using rule 12 (INIT)

    TOKEN_WHILE     go to state 26
    TOKEN_DO        go to state 27
    TOKEN_FOR       go to state 28
    CHAVE_ENTRADA   go to state 29
    BLOCO_FUNCTION  go to state 32
    BLOCO           go to state 73
    COMANDOS        go to state 74
    IF              go to state 35
    LOOPS           go to state 36
    TK_TIPO         go to state 68
    EXPRESSAO       go to state 38
    ATRIBUICAO      go to state 39
    COMANDOLOOPS    go to state 40
    COMANDO         go to state 41
    OPERATIONS      go to state 42
    LOGIC           go to state 43
    RELACION        go to state 44
    CALC            go to state 45
    CONVERSION      go to state 46
    ELEMENTS        go to state 47


State 34

   13 INIT: COMANDOS .
   15 BLOCO: COMANDOS . BLOCO COMANDOS

    TK_NUM        shift, and go to state 1
    TK_REAL       shift, and go to state 2
    TK_STRING     shift, and go to state 3
    TK_CHARACTER  shift, and go to state 4
    TK_ID         shift, and go to state 5
    TK_INT        shift, and go to state 6
    TK_FLOAT      shift, and go to state 7
    TK_FRASE      shift, and go to state 8
    TK_BOOL       shift, and go to state 9
    TK_TRUE       shift, and go to state 10
    TK_FALSE      shift, and go to state 11
    TK_CHAR       shift, and go to state 12
    TK_NEGACAO    shift, and go to state 13
    TK_VAR        shift, and go to state 14
    TK_IF         shift, and go to state 15
    TK_FOR        shift, and go to state 16
    TK_WHILE      shift, and go to state 17
    TK_DO         shift, and go to state 18
    TK_CONTINUE   shift, and go to state 19
    TK_BREAK      shift, and go to state 20
    TK_SCANNER    shift, and go to state 21
    TK_PRINT      shift, and go to state 22
    '-'           shift, and go to state 23
    '{'           shift, and go to state 24
    '('           shift, and go to state 25

    TK_NUM        [reduce using rule 19 (COMANDOS)]
    TK_REAL       [reduce using rule 19 (COMANDOS)]
    TK_STRING     [reduce using rule 19 (COMANDOS)]
    TK_CHARACTER  [reduce using rule 19 (COMANDOS)]
    TK_ID         [reduce using rule 19 (COMANDOS)]
    TK_INT        [reduce using rule 19 (COMANDOS)]
    TK_FLOAT      [reduce using rule 19 (COMANDOS)]
    TK_FRASE      [reduce using rule 19 (COMANDOS)]
    TK_BOOL       [reduce using rule 19 (COMANDOS)]
    TK_TRUE       [reduce using rule 19 (COMANDOS)]
    TK_FALSE      [reduce using rule 19 (COMANDOS)]
    TK_CHAR       [reduce using rule 19 (COMANDOS)]
    TK_NEGACAO    [reduce using rule 19 (COMANDOS)]
    TK_VAR        [reduce using rule 19 (COMANDOS)]
    TK_IF         [reduce using rule 19 (COMANDOS)]
    TK_FOR        [reduce using rule 19 (COMANDOS)]
    TK_WHILE      [reduce using rule 19 (COMANDOS)]
    TK_DO         [reduce using rule 19 (COMANDOS)]
    TK_CONTINUE   [reduce using rule 19 (COMANDOS)]
    TK_BREAK      [reduce using rule 19 (COMANDOS)]
    TK_SCANNER    [reduce using rule 19 (COMANDOS)]
    TK_PRINT      [reduce using rule 19 (COMANDOS)]
    '-'           [reduce using rule 19 (COMANDOS)]
    '{'           [reduce using rule 19 (COMANDOS)]
    '('           [reduce using rule 19 (COMANDOS)]
    $default      reduce using rule 13 (INIT)

    TOKEN_WHILE     go to state 26
    TOKEN_DO        go to state 27
    TOKEN_FOR       go to state 28
    CHAVE_ENTRADA   go to state 29
    BLOCO_FUNCTION  go to state 32
    BLOCO           go to state 75
    COMANDOS        go to state 74
    IF              go to state 35
    LOOPS           go to state 36
    TK_TIPO         go to state 68
    EXPRESSAO       go to state 38
    ATRIBUICAO      go to state 39
    COMANDOLOOPS    go to state 40
    COMANDO         go to state 41
    OPERATIONS      go to state 42
    LOGIC           go to state 43
    RELACION        go to state 44
    CALC            go to state 45
    CONVERSION      go to state 46
    ELEMENTS        go to state 47


State 35

   45 COMANDO: IF .

    $default  reduce using rule 45 (COMANDO)


State 36

   46 COMANDO: LOOPS .

    $default  reduce using rule 46 (COMANDO)


State 37

   10 S: TK_TIPO . TK_MAIN '(' ')' BLOCO_FUNCTION
   33 EXPRESSAO: TK_TIPO . TK_ID
   34          | TK_TIPO . TK_ID TK_IGUAL ATRIBUICAO

    TK_MAIN  shift, and go to state 76
    TK_ID    shift, and go to state 77


State 38

   44 COMANDO: EXPRESSAO . ';'

    ';'  shift, and go to state 78


State 39

   35 EXPRESSAO: ATRIBUICAO .

    $default  reduce using rule 35 (EXPRESSAO)


State 40

   47 COMANDO: COMANDOLOOPS . ';'

    ';'  shift, and go to state 79


State 41

   18 COMANDOS: COMANDO . COMANDOS

    TK_NUM        shift, and go to state 1
    TK_REAL       shift, and go to state 2
    TK_STRING     shift, and go to state 3
    TK_CHARACTER  shift, and go to state 4
    TK_ID         shift, and go to state 5
    TK_INT        shift, and go to state 6
    TK_FLOAT      shift, and go to state 7
    TK_FRASE      shift, and go to state 8
    TK_BOOL       shift, and go to state 9
    TK_TRUE       shift, and go to state 10
    TK_FALSE      shift, and go to state 11
    TK_CHAR       shift, and go to state 12
    TK_NEGACAO    shift, and go to state 13
    TK_VAR        shift, and go to state 14
    TK_IF         shift, and go to state 15
    TK_FOR        shift, and go to state 16
    TK_WHILE      shift, and go to state 17
    TK_DO         shift, and go to state 18
    TK_CONTINUE   shift, and go to state 19
    TK_BREAK      shift, and go to state 20
    TK_SCANNER    shift, and go to state 21
    TK_PRINT      shift, and go to state 22
    '-'           shift, and go to state 23
    '('           shift, and go to state 25

    TK_NUM        [reduce using rule 19 (COMANDOS)]
    TK_REAL       [reduce using rule 19 (COMANDOS)]
    TK_STRING     [reduce using rule 19 (COMANDOS)]
    TK_CHARACTER  [reduce using rule 19 (COMANDOS)]
    TK_ID         [reduce using rule 19 (COMANDOS)]
    TK_INT        [reduce using rule 19 (COMANDOS)]
    TK_FLOAT      [reduce using rule 19 (COMANDOS)]
    TK_FRASE      [reduce using rule 19 (COMANDOS)]
    TK_BOOL       [reduce using rule 19 (COMANDOS)]
    TK_TRUE       [reduce using rule 19 (COMANDOS)]
    TK_FALSE      [reduce using rule 19 (COMANDOS)]
    TK_CHAR       [reduce using rule 19 (COMANDOS)]
    TK_NEGACAO    [reduce using rule 19 (COMANDOS)]
    TK_VAR        [reduce using rule 19 (COMANDOS)]
    TK_IF         [reduce using rule 19 (COMANDOS)]
    TK_FOR        [reduce using rule 19 (COMANDOS)]
    TK_WHILE      [reduce using rule 19 (COMANDOS)]
    TK_DO         [reduce using rule 19 (COMANDOS)]
    TK_CONTINUE   [reduce using rule 19 (COMANDOS)]
    TK_BREAK      [reduce using rule 19 (COMANDOS)]
    TK_SCANNER    [reduce using rule 19 (COMANDOS)]
    TK_PRINT      [reduce using rule 19 (COMANDOS)]
    '-'           [reduce using rule 19 (COMANDOS)]
    '('           [reduce using rule 19 (COMANDOS)]
    $default      reduce using rule 19 (COMANDOS)
